# cw1

./: .coverage  .gitignore  app.py  comp0034-coursework1.md  hw1-q3.c  hw1-q4-bof.c  hw1-q4.c  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py  import_data.py
app/models/: __init__.py  models.py
app/routes/: __init__.py  api.py
app/schemas/: __init__.py  schemas.py
data/csv/: Distance traveled to work-2011.csv  Distance traveled to work-2021.csv  DistanceTravelledToWork-2011.csv  DistanceTravelledToWork-2021.csv  Economic Activity-2011.csv  Economic Activity-2021.csv  EconomicActivity-2011.csv  EconomicActivity-2021.csv  HoursWorked-2011.csv  HoursWorked-2021.csv  Method of travel to work-2011.csv  Method of travel to work-2021.csv  MethodOfTravelToWork-2011.csv  MethodOfTravelToWork-2021.csv  NSSEC-2011.csv  NSSEC-2021.csv  Occupation-2011.csv  Occupation-2021.csv  hours worked-2011.csv  hours worked-2021.csv  occupation-2011.csv  occupation-2021.csv
instance/: data.db
tests/: mock.py  test_api.py
