[tool.poetry]
name = "cw1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^1.2.0"
marshmallow-sqlalchemy = "^1.0.0"
flask-testing = "^0.8.1"
faker = "^23.1.0"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
autopep8 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
